# oiakfp

./: .gitignore  AddTest.h  AddingTest.cpp  AddingTest.h  ByteArray.cpp  ByteArray.cpp.autosave  ByteArray.h  CMakeLists.txt  DevTest.cpp  DevTest.h  Float.h  MulTest.cpp  MulTest.h  SubTest.cpp  SubTest.h  Test.h  Timer.cpp  VariableFloat.h  addBytes.s  app  main.cpp  oiakfp.pro
Debug/: Makefile  add.txt  add2.txt  mul.txt  oiakfp  sqrt  sub.txt  summary0.txt
oiakfp/: Float.h  main.cpp  oiakfp.pro
test/: AddTest.cpp  AddTest.h  DivTest.cpp  DivTest.h  MulTest.h  SqrtTest.h  SubTest.h  Test.cpp  Test.h
